:wrench: tweaked memory consumption.